Adding new pages of comic after testing and updated package.json for new port

--- a/comics/page_115.html
+++ b/comics/page_115.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Issue 04 | Comics | Kamigen | A Tropical Cyberpunk RPG
+    <title>Page 115 | Comics | Kamigen | A Tropical Cyberpunk World
     </title>
     <base href="/">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
@@ -31,68 +31,55 @@
         </div>
       </div>
       <div class="ui dividing header"></div>
-      <div class="row" id="comics">
+      <div class="row">
+        <div class="column center aligned">
+          <h2><a href="/comics.html">Comics</a> \ <a href="/comics/issue_4.html">Issue 04</a> \ Page 115</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          <div class="ui one column center aligned page grid">
+            <div class="column eight wide"><a class="ui grey large labeled icon button" href="/comics/page_114.html"><i class="icon reply"></i>Previous</a></div>
+            <div class="column eight wide">
+              <div class="ui grey large right labeled icon button">Coming soon!</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
         <div class="column">
           <div class="ui one column stackable center aligned page grid">
-            <div class="column">
-              <div class="ui divider header"></div>
-              <h2><a href="/comics.html">Comics</a> \ 
-                Issue 04
-              </h2>
-              <div class="ui divider header"></div>
+            <div class="column sixteen wide"></div><a href="/comics/issue_4.html"><img class="ui image fluid" src="../art/comics/HD/Kamigen Page 115-01.png"></a>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          <div class="ui one column center aligned page grid">
+            <div class="column eight wide"><a class="ui grey large labeled icon button" href="/comics/page_114.html"><i class="icon reply"></i>Previous</a></div>
+            <div class="column eight wide">
+              <div class="ui grey large right labeled icon button">Coming soon!</div>
             </div>
-            <div class="column four wide"><a href="/comics/issue_4_cover.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen Issue 04 Cover-01.png">
-                <h3>Cover</h3></a></div>
-            <div class="column four wide"><a href="/comics/page_91.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%2091-01.png">
-                <h3>Page 91</h3></a></div>
-            <div class="column four wide"><a href="/comics/page_92.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%2092-01.png">
-                <h3>Page 92</h3></a></div>
-            <div class="column four wide"><a href="/comics/page_93.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%2093-01.png">
-                <h3>Page 93</h3></a></div>
-            <div class="column four wide"><a href="/comics/page_94.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%2094-01.png">
-                <h3>Page 94</h3></a></div>
-            <div class="column four wide"><a href="/comics/page_95.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%2095-01.png">
-                <h3>Page 95</h3></a></div>
-            <div class="column four wide"><a href="/comics/page_96.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%2096-01.png">
-                <h3>Page 96</h3></a></div>
-            <div class="column four wide"><a href="/comics/page_97.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%2097-01.png">
-                <h3>Page 97</h3></a></div>
-            <div class="column four wide"><a href="/comics/page_98.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%2098-01.png">
-                <h3>Page 98</h3></a></div>
-            <div class="column four wide"><a href="/comics/page_99.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%2099-01.png">
-                <h3>Page 99</h3></a></div>
-            <div class="column four wide"><a href="/comics/page_100.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20100-01.png">
-                <h3>Page 100</h3></a></div>
-            <div class="column four wide"><a href="/comics/page_101.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20101-01.png">
-                <h3>Page 101</h3></a></div>
-            <div class="column four wide"><a href="/comics/page_102.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20102-01.png">
-                <h3>Page 102</h3></a></div>
-            <div class="column four wide"><a href="/comics/page_103.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20103-01.png">
-                <h3>Page 103</h3></a></div>
-            <div class="column four wide"><a href="/comics/page_104.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20104-01.png">
-                <h3>Page 104</h3></a></div>
-            <div class="column four wide"><a href="/comics/page_105.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20105-01.png">
-                <h3>Page 105</h3></a></div>
-            <div class="column four wide"><a href="/comics/page_106.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20106-01.png">
-                <h3>Page 106</h3></a></div>
-            <div class="column four wide"><a href="/comics/page_107.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20107-01.png">
-                <h3>Page 107</h3></a></div>
-            <div class="column four wide"><a href="/comics/page_108.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20108-01.png">
-                <h3>Page 108</h3></a></div>
-            <div class="column four wide"><a href="/comics/page_109.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20109-01.png">
-                <h3>Page 109</h3></a></div>
-            <div class="column four wide"><a href="/comics/page_110.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20110-01.png">
-                <h3>Page 110</h3></a></div>
-            <div class="column four wide"><a href="/comics/page_111.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20111-01.png">
-                <h3>Page 111</h3></a></div>
-            <div class="column four wide"><a href="/comics/page_112.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20112-01.png">
-                <h3>Page 112</h3></a></div>
-            <div class="column four wide"><a href="/comics/page_113.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20113-01.png">
-                <h3>Page 113</h3></a></div>
-            <div class="column four wide"><a href="/comics/page_114.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20114-01.png">
-                <h3>Page 114</h3></a></div>
-            <div class="column four wide"><a href="/comics/page_115.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20115-01.png">
-                <h3>Page 115</h3></a></div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column center aligned">
+          <h2><a href="/comics.html">Comics</a> \ <a href="/comics/issue_4.html">Issue 04</a> \ Page 115</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          <div class="ui one column center aligned page grid" id="page_script">
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          <div class="ui one column stackable center aligned page grid">
+            <div class="column sixteen wide">
+              <div id="disqus_thread"></div>
+            </div>
           </div>
         </div>
       </div>
