--- a/index.html
+++ b/index.html
@@ -44,32 +44,39 @@
                   <div class="ui two column grid stackable">
                     <div class="row">
                       <div class="column"><a href="/comics/issue_4.html" title="Go to Issue 04">
+                          <h3>Merry Christmas Kamigen Fans!</h3></a><small><em>24 December 2020</em></small>
+                        <p>This is <a href="/comics/issue_4.html">a 4 page release</a> to thank your, dear fans, for being patient.</p>
+                        <p>Hope you are all enjoying the holiday season, see you next year!</p>
+                      </div>
+                      <div class="column"><a href="/comics/issue_4.html" title="Go to Issue 04">
                           <h3>What happened to Team Jim</h3></a><small><em>30 October 2020</em></small>
                         <p>Anak, Jim and Nick crashed into the ocean and seemed to perish. Sumpoy certainly thinks they did.</p>
                         <p>Find out what happened in the latest pages of <a href="/comics/issue_4.html">Issue 04.</a></p>
                       </div>
+                    </div>
+                    <div class="row">
                       <div class="column"><a href="/comics/issue_4.html" title="Go to Issue 04">
                           <h3>The story continues in pages 104-107</h3></a><small><em>15 October 2020</em></small>
                         <p>After a near 3 month wait, the next pages of Kamigen are out!</p>
                         <p>Makaptan and Sumpoy are ready to take on Jim, Nick and Anak when they return from Shangri-lah in <a href="/comics/issue_4.html">Issue 04.</a></p>
                       </div>
-                    </div>
-                    <div class="row">
                       <div class="column"><a href="/comics/issue_4.html" title="Go to Issue 04">
                           <h3>Over 100 pages of Kamigen are out!</h3></a><small><em>21 July 2020</em></small>
                         <p>This is a pretty special extra large release at 5 pages which has pushed the series to 103 pages.</p>
                         <p>What mysteries lie waiting in Shangri Lah waiting to be discovered? Find out in <a href="/comics/issue_4.html">Issue 04.</a></p>
                       </div>
+                    </div>
+                    <div class="row">
                       <div class="column"><a href="/comics/issue_4.html" title="Go to Issue 04">
                           <h3>Issue 04 continues in pages 95-98</h3></a><small><em>4 July 2020</em></small>
                         <p>Jim and Nick are in serious trouble - Makaptan is sending their entire force of genetic monsters at them. Find out what happens next over in <a href="/comics/issue_4.html">Issue 04.</a></p>
                       </div>
-                    </div>
-                    <div class="row">
                       <div class="column"><a href="/comics/issue_4.html" title="Go to Issue 04">
                           <h3>The first pages of Issue 04 are out!</h3></a><small><em>20 June 2020</em></small>
                         <p>The story is finally starting to come together, our characters have a number of different agendas and upcoming storylines. Check out <a href="/comics/issue_4.html">Issue 04 now!</a></p>
                       </div>
+                    </div>
+                    <div class="row"> 
                       <div class="column"><a href="/comics/issue_3.html" title="Go to Issue 03">
                           <h3>Issue 03 is complete!</h3></a><small><em>2 June 2020</em></small>
                         <p>In the epilogue of issue 03, the final fate of the Ancient Visayans and all the survivors of Bulawan is finally revealed. Our story is ready to continue in the present, so come on and finish off <a href="/comics/issue_3.html">Issue 03.</a></p>
@@ -82,7 +89,7 @@
           </div>
         </div>
         <div class="column six wide">
-          <h3 class="ui dividing header inverted">Latest Pages</h3><a href="/comics/page_99.html" style="min-height: 250px; display: block; position: relative;"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20100-01.png" style="clip: rect(20px, 650px, 250px, 20px); opacity: 0.5; position: absolute; z-index: 2;"></a>
+          <h3 class="ui dividing header inverted">Latest Pages</h3><a href="/comics/page_112.html" style="min-height: 250px; display: block; position: relative;"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20112-01.png" style="clip: rect(20px, 650px, 250px, 20px); opacity: 0.5; position: absolute; z-index: 2;"></a>
           <h3 class="ui dividing header inverted">About Kamigen</h3>
           <p>Kamigen is a tropical cyberpunk world with aircraft combat. <a href="/game.html">Drop into the pilot seat and join the struggle</a> or <a href="./comics.html">read the story in the comics</a>.</p>
           <p>This media franchise is independently developed and needs your feedback and support to progress.</p>
