Adding new comic pages

--- a/comics/issue_4.html
+++ b/comics/issue_4.html
@@ -93,6 +93,19 @@
                 <h3>Page 114</h3></a></div>
             <div class="column four wide"><a href="/comics/page_115.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20115-01.png">
                 <h3>Page 115</h3></a></div>
+            <div class="column four wide"><a href="/comics/page_116.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20116-01.png">
+                <h3>Page 116</h3></a></div>
+            <div class="column four wide"><a href="/comics/page_117.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20117-01.png">
+                <h3>Page 117</h3></a></div>
+            <div class="column four wide"><a href="/comics/page_118.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20118-01.png">
+                <h3>Page 118</h3></a></div>
+            <div class="column four wide"><a href="/comics/page_119.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20119-01.png">
+                <h3>Page 119</h3></a></div>
+            <div class="column four wide"><a href="/comics/page_120.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20120-01.png">
+                <h3>Page 120</h3></a></div>
+            <div class="column four wide"><a href="/comics/issue_5_cover.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen Issue 05 Cover-01.png">
+                <h3>Issue 05</h3>
+                <p>Coming soon!</p></a></div>
           </div>
         </div>
       </div>
