Adding blog update and new screenshots

--- a/index.html
+++ b/index.html
@@ -43,45 +43,52 @@
                 <div class="ui grid stackable">
                   <div class="ui two column grid stackable">
                     <div class="row">
+                      <div class="column"><a href="/wiki/blog/20210827-late-august-production-update.html" title="Late August Production Update">
+                          <h3>Late August Production Update</h3></a><small><em>27 August 2021</em></small>
+                        <p>It's been a while since we've posted so here's a quick rundown of what's been going on behind the scenes!</p>
+                        <p>The Kamigen Comics and Game are in heavy production so apologies we've not had time to keep the website up to date.</p>
+                      </div>
                       <div class="column"><a href="/comics/issue_4.html" title="Go to Issue 04">
                           <h3>Issue 4 is complete!</h3></a><small><em>17 February 2020</em></small>
                         <p>It's finally here - the final 5 pages of Issue 4 and the Issue 5 cover have been added.</p>
                         <p><a href="https://www.facebook.com/kamigenofficial">Like our Facebook page</a>, <a href="https://www.instagram.com/kamigen_comics/">follow us on Instagram</a> and get yourself some <a href="/shop.html">Kamigen merchandise</a>.</p>
                       </div>
+                    </div>
+                    <div class="row">
                       <div class="column"><a href="/comics/issue_4.html" title="Go to Issue 04">
                           <h3>Merry Christmas Kamigen Fans!</h3></a><small><em>24 December 2020</em></small>
                         <p>This is <a href="/comics/issue_4.html">a 4 page release</a> to thank your, dear fans, for being patient.</p>
-                        <p>Hope you are all enjoying the holiday season, see you next year!</p>
+                        <p>Hope you are all enjoying the holiday season, see you next year!     </p>
                       </div>
-                    </div>
-                    <div class="row">     
                       <div class="column"><a href="/comics/issue_4.html" title="Go to Issue 04">
                           <h3>What happened to Team Jim</h3></a><small><em>30 October 2020</em></small>
                         <p>Anak, Jim and Nick crashed into the ocean and seemed to perish. Sumpoy certainly thinks they did.</p>
                         <p>Find out what happened in the latest pages of <a href="/comics/issue_4.html">Issue 04.</a></p>
                       </div>
+                    </div>
+                    <div class="row">
                       <div class="column"><a href="/comics/issue_4.html" title="Go to Issue 04">
                           <h3>The story continues in pages 104-107</h3></a><small><em>15 October 2020</em></small>
                         <p>After a near 3 month wait, the next pages of Kamigen are out!</p>
                         <p>Makaptan and Sumpoy are ready to take on Jim, Nick and Anak when they return from Shangri-lah in <a href="/comics/issue_4.html">Issue 04.</a></p>
                       </div>
-                    </div>
-                    <div class="row">
                       <div class="column"><a href="/comics/issue_4.html" title="Go to Issue 04">
                           <h3>Over 100 pages of Kamigen are out!</h3></a><small><em>21 July 2020</em></small>
                         <p>This is a pretty special extra large release at 5 pages which has pushed the series to 103 pages.</p>
                         <p>What mysteries lie waiting in Shangri Lah waiting to be discovered? Find out in <a href="/comics/issue_4.html">Issue 04.</a></p>
                       </div>
+                    </div>
+                    <div class="row">
                       <div class="column"><a href="/comics/issue_4.html" title="Go to Issue 04">
                           <h3>Issue 04 continues in pages 95-98</h3></a><small><em>4 July 2020</em></small>
                         <p>Jim and Nick are in serious trouble - Makaptan is sending their entire force of genetic monsters at them. Find out what happens next over in <a href="/comics/issue_4.html">Issue 04.</a></p>
                       </div>
-                    </div>
-                    <div class="row">
                       <div class="column"><a href="/comics/issue_4.html" title="Go to Issue 04">
                           <h3>The first pages of Issue 04 are out!</h3></a><small><em>20 June 2020</em></small>
                         <p>The story is finally starting to come together, our characters have a number of different agendas and upcoming storylines. Check out <a href="/comics/issue_4.html">Issue 04 now!</a></p>
                       </div>
+                    </div>
+                    <div class="row">
                       <div class="column"><a href="/comics/issue_3.html" title="Go to Issue 03">
                           <h3>Issue 03 is complete!</h3></a><small><em>2 June 2020</em></small>
                         <p>In the epilogue of issue 03, the final fate of the Ancient Visayans and all the survivors of Bulawan is finally revealed. Our story is ready to continue in the present, so come on and finish off <a href="/comics/issue_3.html">Issue 03.</a></p>
