--- a/wiki.html
+++ b/wiki.html
@@ -37,7 +37,7 @@
           <h3 class="ui dividing header inverted">Kamigen World</h3>
           <div class="ui fluid menu vertical inverted"><a class="item" href="/wiki/characters.html">Characters</a><a class="item" href="/wiki/locations.html">Locations</a><a class="item" href="/wiki/lore.html">Lore</a><a class="item" href="/wiki/timeline.html">Timeline</a></div>
           <h3 class="ui dividing header inverted">Production</h3>
-          <div class="ui fluid menu vertical inverted"><a class="item" href="/wiki/info_sheets.html">Character and story info sheets</a><a class="item" href="/wiki/concept_art.html">Concept art</a><a class="item" href="/wiki/production_notes.html">Production notes</a><a class="item" href="/wiki/screenshots.html">Screenshots</a></div>
+          <div class="ui fluid menu vertical inverted"><a class="item" href="/wiki/blog.html">Blog</a><a class="item" href="/wiki/info_sheets.html">Character and story info sheets</a><a class="item" href="/wiki/concept_art.html">Concept art</a><a class="item" href="/wiki/production_notes.html">Production notes</a><a class="item" href="/wiki/screenshots.html">Screenshots</a></div>
         </div>
         <div class="column ten wide">
           <h1>Welcome to the Kamigen Wiki!</h1>
