--- a/wiki/blog.html
+++ b/wiki/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Characters | Wiki | Kamigen | A Tropical Cyberpunk World
+    <title>Blog | Wiki | Kamigen | A Tropical Cyberpunk World
     </title>
     <base href="/">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
@@ -41,67 +41,21 @@
         </div>
         <div class="column ten wide">
           <div class="center aligned">
-            <h2><a href="/wiki.html">Wiki</a> \ Characters</h2>
+            <h2><a href="/wiki.html">Wiki</a> \ Blog</h2>
           </div>
           <div class="ui dividing header"></div>
           <div class="ui four column grid">
             <div class="row">
               <div class="column">
-                <h3>Anak</h3>
-                <p><strong>Species: </strong>Balubid</p>
-                <p><strong>Born: </strong>1535 AD on Camiguin Island in the Philippines</p>
-                <div class="description"><strong>Bio: </strong>
-                  <p>The last Balubid, Anak's egg was found by Nick in the 16th century on under the Santo Nino cold spring in Camiguin Island in the Philippines.</p>
-                  <p>It's implied there was previously an ice glacier under the Santo Nino cold spring.</p>
+                <div class="column"><a href="/wiki/blog/20210827-late-august-production-update.html" title="Late August Production Update">
+                    <h3>Late August Production Update</h3></a><small><em>27 August 2021</em></small>
+                  <p>It's been a while since we've posted so here's a quick rundown of what's been going on behind the scenes!</p>
+                  <p>The Kamigen Comics and Game are in heavy production so apologies we've not had time to keep the website up to date.</p>
                 </div>
               </div>
-              <div class="column">
-                <h3>Jim</h3>
-                <p><strong>Species: </strong>Modern Human</p>
-                <p><strong>Born: </strong>2242 AD on a free human vessel at sea</p>
-                <div class="description"><strong>Bio: </strong>
-                  <p>Jim was an orphan who grew up drifting between various crews and vessels before finally settling on Kamigen island to start a new life.</p>
-                  <p>A talented aircraft pilot since becoming a cyborg, Jim masks his suffering with a light sense of humour.</p>
-                </div>
-              </div>
-              <div class="column">
-                <h3>Makaptan a.ka. Kaptan</h3>
-                <p><strong>Species: </strong>Ancient Human</p>
-                <p><strong>Born: </strong>Over 100 million years ago in the city of Bulawan in Antarctica.</p>
-                <div class="description">
-                  <p>Born into a family of explorers, Kaptan was legendary among his people for being able to fight dinosaurs by turning into a giant.</p>
-                  <p>After his fight with Bulawan Dakong Umang, his injuries lead him to becoming a cyborg and he changes his name to Makaptan.</p>
-                </div>
-              </div>
-              <div class="column"> 
-                <h3>Nick</h3>
-                <p><strong>Species: </strong>Modern Human</p>
-                <p><strong>Born: </strong>1516 AD on Camiguin Island in the Phillippines</p>
-                <div class="description">
-                  <p>Descending from Ancient Human settlers, Nick was born on Camiguin Island and loves his home.</p>
-                  <p>Fiercely protective of the environment and his people, Nick at some point attains immortality along with his wife Trudy.</p>
-                </div>
-              </div>
-            </div>
-            <div class="row"> 
-              <div class="column">
-                <h3>Sumpoy a.ka. Tom</h3>
-                <p><strong>Species: </strong>Ancient Human</p>
-                <p><strong>Born: </strong>Over 100 million years ago in the city of Bulawan in Antarctica.</p>
-                <div class="description">
-                  <p>Born into a family of scientists, Sumpoy's intellectual prowess is unparalleled and behind saving the human race more than once.</p>
-                  <p>Sumpoy cares little for others but will to anything to gain the affection and attention of Makaptan, whom he has served for eons.</p>
-                </div>
-              </div>
-              <div class="column">     
-                <h3>Trudy</h3>
-                <p><strong>Species: </strong>Modern Human</p>
-                <p><strong>Born: </strong>1535 AD on Camiguin Island in the Philippines</p>
-                <div class="description">
-                  <p>Born the same year as Nick, Trudy grew up in love with her people and their exploits.</p>
-                  <p>She believed that one day the Bulawan city would be restored, however hopes to find a real path to it that isn't like Makaptan and Sumpoy's vision for it.</p>
-                </div>
-              </div>
+              <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"> </div>
             </div>
           </div>
         </div>
