--- a/comics/issue_5.html
+++ b/comics/issue_5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Comics | Kamigen | A Tropical Cyberpunk World
+    <title>Issue 05 | Comics | Kamigen | A Tropical Cyberpunk RPG
     </title>
     <base href="/">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
@@ -31,67 +31,19 @@
         </div>
       </div>
       <div class="ui dividing header"></div>
-      <div class="row">
+      <div class="row" id="comics">
         <div class="column">
-          <div class="ui stackable center aligned page grid">
-            <div class="row">
-              <div class="column four wide"><a href="/comics/cover.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen_Cover.png">
-                  <h3>The whole story</h3></a></div>
-              <div class="column twelve wide left aligned"><a href="/comics/cover.html">
-                  <h2>The whole story</h2></a>
-                <h4>First time reading the Kamigen comics? This is the spot for you!</h4>
-                <p>This is the whole story from the official hard cover to the latest pages.</p><a href="/comics/cover.html">Read the whole story now</a>
-              </div>
+          <div class="ui one column stackable center aligned page grid">
+            <div class="column">
+              <div class="ui divider header"></div>
+              <h2><a href="/comics.html">Comics</a> \ 
+                Issue 05
+              </h2>
+              <div class="ui divider header"></div>
             </div>
-            <div class="row">
-              <div class="column four wide"><a href="/comics/issue_1.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen Issue 01 Cover-01.png">
-                  <h3>Issue 01</h3></a></div>
-              <div class="column four wide left aligned"><a href="/comics/issue_1.html">
-                  <h2>Issue 01</h2></a>
-                <h4>Welcome to Kamigen</h4>
-                <p>The first issue introduces Kamigen Island and explains a bit about the current state of the world.</p>
-                <ul>
-                  <li><a href="/comics/issue_1.html">Open Issue 01</a></li>
-                  <li><a href="/comics/issue_1_script.html">Transcript</a></li>
-                </ul>
-              </div>
-              <div class="column four wide"><a href="/comics/issue_2.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen Issue 02 Cover-01.png">
-                  <h3>Issue 02</h3></a></div>
-              <div class="column four wide left aligned"><a href="/comics/issue_2.html">
-                  <h2>Issue 02</h2></a>
-                <h4>Mysteries in Outer Space</h4>
-                <p>Ryoko is part of a team tasked with saving the Earth from a second water comet and the human race from extinction!</p>
-                <ul>
-                  <li><a href="/comics/issue_2.html">Launch Issue 02</a></li>
-                  <li><a href="/comics/issue_2_script.html">Transcript</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="row">
-              <div class="column four wide"><a href="/comics/issue_3.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen Issue 03 Cover-01.png">
-                  <h3>Issue 03</h3></a></div>
-              <div class="column four wide left aligned"><a href="/comics/issue_3.html">
-                  <h2>Issue 03</h2></a>
-                <h4>Bulawan</h4>
-                <p>A hundred million years ago, an advanced society prospered from advancements based on ancient relics from a long dead race.</p><a href="/comics/issue_3.html">Enter Issue 03</a>
-              </div>
-              <div class="column four wide"><a href="/comics/issue_4.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen Issue 04 Cover-01.png">
-                  <h3>Issue 04</h3></a></div>
-              <div class="column four wide left aligned"><a href="/comics/issue_4.html">
-                  <h2>Issue 04</h2></a>
-                <h4>Islands</h4>
-                <p>Anak is on a quest to find out why he's the last of his kind - oh and he might as well save the human race along the way!</p><a href="/comics/issue_4.html">Begin Issue 04</a>
-              </div>
-            </div>
-            <div class="row">
-              <div class="column four wide"><a href="/comics/issue_5.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen Issue 05 Cover-01.png">
-                  <h3>Issue 05</h3></a></div>
-              <div class="column four wide left aligned"><a href="/comics/issue_5.html">
-                  <h2>Issue 05</h2></a>
-                <h4>Name TBA</h4>
-                <p>This is the end of phase 1 and the first comic to be entirely in color!</p><a href="/comics/issue_5.html">Preview Issue 05</a>
-              </div>
-            </div>
+            <div class="column four wide"><a href="/comics/issue_5_cover.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen Issue 05 Cover-01.png">
+                <h3>Issue 05</h3>
+                <p>New pages coming by September 1 2021!</p></a></div>
           </div>
         </div>
       </div>
