Added new pages to Issue 5 page and created their html pages

--- a/comics/issue_5_cover.html
+++ b/comics/issue_5_cover.html
@@ -40,8 +40,7 @@
         <div class="column">
           <div class="ui one column center aligned page grid">
             <div class="column eight wide"><a class="ui grey large labeled icon button" href="/comics/page_120.html"><i class="icon reply"></i>Previous</a></div>
-            <div class="column eight wide">
-              <div class="ui grey large right labeled icon button">Coming soon!</div>
+            <div class="column eight wide"><a class="ui grey large right labeled icon button" href="/comics/page_121.html"><i class="icon share"></i>Next</a>
             </div>
           </div>
         </div>
@@ -49,7 +48,7 @@
       <div class="row">
         <div class="column">
           <div class="ui one column stackable center aligned page grid">
-            <div class="column sixteen wide"></div><a href="/comics/issue_4.html"><img class="ui image fluid" src="../art/comics/HD/Kamigen Issue 05 Cover-01.png"></a>
+            <div class="column sixteen wide"></div><a href="/comics/page_121.html"><img class="ui image fluid" src="../art/comics/HD/Kamigen Issue 05 Cover-01.png"></a>
           </div>
         </div>
       </div>
@@ -57,8 +56,7 @@
         <div class="column">
           <div class="ui one column center aligned page grid">
             <div class="column eight wide"><a class="ui grey large labeled icon button" href="/comics/page_120.html"><i class="icon reply"></i>Previous</a></div>
-            <div class="column eight wide">
-              <div class="ui grey large right labeled icon button">Coming soon!</div>
+            <div class="column eight wide"><a class="ui grey large right labeled icon button" href="/comics/page_121.html"><i class="icon share"></i>Next</a>
             </div>
           </div>
         </div>
