--- a/comics/page_121.html
+++ b/comics/page_121.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Issue 05 | Comics | Kamigen | A Tropical Cyberpunk RPG
+    <title>Page 121 | Comics | Kamigen | A Tropical Cyberpunk World
     </title>
     <base href="/">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
@@ -31,29 +31,53 @@
         </div>
       </div>
       <div class="ui dividing header"></div>
-      <div class="row" id="comics">
+      <div class="row">
+        <div class="column center aligned">
+          <h2><a href="/comics.html">Comics</a> \ <a href="/comics/issue_5.html">Issue 05</a> \ Page 121</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          <div class="ui one column center aligned page grid">
+            <div class="column eight wide"><a class="ui grey large labeled icon button" href="/comics/issue_5_cover.html"><i class="icon reply"></i>Previous</a></div>
+            <div class="column eight wide"><a class="ui grey large right labeled icon button" href="/comics/page_122.html"><i class="icon share"></i>Next</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
         <div class="column">
           <div class="ui one column stackable center aligned page grid">
-            <div class="column">
-              <div class="ui divider header"></div>
-              <h2><a href="/comics.html">Comics</a> \ 
-                Issue 05
-              </h2>
-              <div class="ui divider header"></div>
+            <div class="column sixteen wide"></div><a href="/comics/page_122.html"><img class="ui image fluid" src="../art/comics/HD/Kamigen Page 121.png"></a>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          <div class="ui one column center aligned page grid">
+            <div class="column eight wide"><a class="ui grey large labeled icon button" href="/comics/issue_5_cover.html"><i class="icon reply"></i>Previous</a></div>
+            <div class="column eight wide"><a class="ui grey large right labeled icon button" href="/comics/page_122.html"><i class="icon share"></i>Next</a>
             </div>
-            <div class="column four wide"></div>
-            <div class="column four wide"><a href="/comics/issue_5_cover.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen Issue 05 Cover-01.png">
-                <h3>Issue 05</h3>
-                <p>New pages coming by October 1 2021!</p></a></div>
-            <div class="column four wide"><a href="/comics/page_121.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20121.png">
-                <h3>Page 121</h3></a></div>
-            <div class="column four wide"></div>
-            <div class="column four wide"><a href="/comics/page_122.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20122.png">
-                <h3>Page 122</h3></a></div>
-            <div class="column four wide"><a href="/comics/page_123.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20123.png">
-                <h3>Page 123</h3></a></div>
-            <div class="column four wide"><a href="/comics/page_124.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20124.png">
-                <h3>Page 124</h3></a></div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column center aligned">
+          <h2><a href="/comics.html">Comics</a> \ <a href="/comics/issue_5.html">Issue 05</a> \ Page 121</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          <div class="ui one column center aligned page grid" id="page_script">
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          <div class="ui one column stackable center aligned page grid">
+            <div class="column sixteen wide">
+              <div id="disqus_thread"></div>
+            </div>
           </div>
         </div>
       </div>
