Adding new blog article

--- a/wiki/blog.html
+++ b/wiki/blog.html
@@ -46,14 +46,16 @@
           <div class="ui dividing header"></div>
           <div class="ui four column grid">
             <div class="row">
-              <div class="column">
-                <div class="column"><a href="/wiki/blog/20210827-late-august-production-update.html" title="Late August Production Update">
-                    <h3>Late August Production Update</h3></a><small><em>27 August 2021</em></small>
-                  <p>It's been a while since we've posted so here's a quick rundown of what's been going on behind the scenes!</p>
-                  <p>The Kamigen Comics and Game are in heavy production so apologies we've not had time to keep the website up to date.</p>
-                </div>
+              <div class="column"><a href="/wiki/blog/20210930-reclaiming-the-lost-visayan-culture.html" title="Reclaiming the lost Visayan culture">
+                  <h3>Reclaiming the lost Visayan culture</h3></a><small><em>30 September 2021</em></small>
+                <p>The mythology of Visayan culture featured a diverse pantheon of unique indigenous deities, some of whom are featured as characters in the Kamigen comics.</p>
+                <p>This project is dedicated to our lost culture, hoping to make a positive contribution to the growing knowledge and awareness of indigenous issues in the Philippines.</p>
               </div>
-              <div class="column"></div>
+              <div class="column"><a href="/wiki/blog/20210827-late-august-production-update.html" title="Late August Production Update">
+                  <h3>Late August Production Update</h3></a><small><em>27 August 2021</em></small>
+                <p>It's been a while since we've posted so here's a quick rundown of what's been going on behind the scenes!</p>
+                <p>The Kamigen Comics and Game are in heavy production so apologies we've not had time to keep the website up to date.</p>
+              </div>
               <div class="column"></div>
               <div class="column"> </div>
             </div>
