--- a/comics/issue_5.html
+++ b/comics/issue_5.html
@@ -41,19 +41,25 @@
               </h2>
               <div class="ui divider header"></div>
             </div>
-            <div class="column four wide"></div>
             <div class="column four wide"><a href="/comics/issue_5_cover.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen Issue 05 Cover-01.png">
                 <h3>Issue 05</h3>
                 <p>New pages coming by October 1 2021!</p></a></div>
             <div class="column four wide"><a href="/comics/page_121.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20121.png">
                 <h3>Page 121</h3></a></div>
-            <div class="column four wide"></div>
             <div class="column four wide"><a href="/comics/page_122.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20122.png">
                 <h3>Page 122</h3></a></div>
             <div class="column four wide"><a href="/comics/page_123.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20123.png">
                 <h3>Page 123</h3></a></div>
             <div class="column four wide"><a href="/comics/page_124.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20124.png">
                 <h3>Page 124</h3></a></div>
+            <div class="column four wide"><a href="/comics/page_125.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20125.png">
+                <h3>Page 125</h3></a></div>
+            <div class="column four wide"><a href="/comics/page_126.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20126.png">
+                <h3>Page 126</h3></a></div>
+            <div class="column four wide"><a href="/comics/page_127.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20127.png">
+                <h3>Page 127</h3></a></div>
+            <div class="column four wide"><a href="/comics/page_128.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20128.png">
+                <h3>Page 128</h3></a></div>
           </div>
         </div>
       </div>
