Fixed screenshots location

--- a/comics/issue_5.html
+++ b/comics/issue_5.html
@@ -43,7 +43,7 @@
             </div>
             <div class="column four wide"><a href="/comics/issue_5_cover.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen Issue 05 Cover-01.png">
                 <h3>Issue 05</h3>
-                <p>New pages coming by October 1 2021!</p></a></div>
+                <p>New pages coming by December 1st 2021!</p></a></div>
             <div class="column four wide"><a href="/comics/page_121.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20121.png">
                 <h3>Page 121</h3></a></div>
             <div class="column four wide"><a href="/comics/page_122.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen%20Page%20122.png">
