Comics issues in chronological order, larger images, adding gradient from new old v2 build

--- a/comics.html
+++ b/comics.html
@@ -33,63 +33,74 @@
       <div class="ui dividing header"></div>
       <div class="row">
         <div class="column">
-          <div class="ui stackable center aligned page grid">
+          <div class="ui inverted vertical center aligned segment" id="comics_hero">
+            <div class="gradient-sky"></div>
+            <div class="gradient-water"></div>
+            <div class="gradient-water-edge"></div>
+            <div class="ui stackable middle aligned very relaxed page grid">
+              <div class="row">
+                <div class="column eight wide"><a href="/comics/cover.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen_Cover.png">
+                    <h3>The whole story</h3></a></div>
+                <div class="column eight wide left aligned"><a href="/comics/cover.html">
+                    <h2>The whole story</h2></a>
+                  <h4>First time reading the Kamigen comics? This is the spot for you!</h4>
+                  <p>This is the whole story from the official hard cover to the latest pages.</p><a href="/comics/cover.html">Read the whole story now</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          <div class="ui stackable middle aligned very relaxed page grid">
             <div class="row">
-              <div class="column four wide"><a href="/comics/cover.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen_Cover.png">
-                  <h3>The whole story</h3></a></div>
-              <div class="column twelve wide left aligned"><a href="/comics/cover.html">
-                  <h2>The whole story</h2></a>
-                <h4>First time reading the Kamigen comics? This is the spot for you!</h4>
-                <p>This is the whole story from the official hard cover to the latest pages.</p><a href="/comics/cover.html">Read the whole story now</a>
+              <div class="column eight wide"><a href="/comics/issue_1.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen Issue 01 Cover-01.png">
+                  <h3>Issue 01</h3></a></div>
+              <div class="column eight wide left aligned"><a href="/comics/issue_1.html">
+                  <h2>Issue 01</h2></a>
+                <h4>Welcome to Kamigen</h4>
+                <p>The first issue introduces Kamigen Island and explains a bit about the current state of the world.</p>
+                <p><a href="/comics/issue_1.html">Open Issue 01</a></p>
+                <p><a href="/comics/issue_1_script.html">Transcript</a></p>
               </div>
             </div>
             <div class="row">
-              <div class="column four wide"><a href="/comics/issue_5.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen Issue 05 Cover-01.png">
-                  <h3>Issue 05</h3></a></div>
-              <div class="column four wide left aligned"><a href="/comics/issue_5.html">
-                  <h2>Issue 05</h2></a>
-                <h4>Name TBA</h4>
-                <p>This is the end of phase 1 and the first comic to be entirely in color!</p><a href="/comics/issue_5.html">Preview Issue 05</a>
+              <div class="column eight wide"><a href="/comics/issue_2.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen Issue 02 Cover-01.png">
+                  <h3>Issue 02</h3></a></div>
+              <div class="column eight wide left aligned"><a href="/comics/issue_2.html">
+                  <h2>Issue 02</h2></a>
+                <h4>Mysteries in Outer Space</h4>
+                <p>Ryoko is part of a team tasked with saving the Earth from a second water comet and the human race from extinction!</p>
+                <p><a href="/comics/issue_2.html">Launch Issue 02</a></p>
+                <p><a href="/comics/issue_2_script.html">Transcript</a></p>
               </div>
-              <div class="column four wide"><a href="/comics/issue_4.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen Issue 04 Cover-01.png">
+            </div>
+            <div class="row">
+              <div class="column eight wide"><a href="/comics/issue_3.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen Issue 03 Cover-01.png">
+                  <h3>Issue 03</h3></a></div>
+              <div class="column eight wide left aligned"><a href="/comics/issue_3.html">
+                  <h2>Issue 03</h2></a>
+                <h4>Bulawan</h4>
+                <p>A hundred million years ago, an advanced society prospered from advancements based on ancient relics from a long dead race.</p><a href="/comics/issue_3.html">Enter Issue 03</a>
+              </div>
+            </div>
+            <div class="row">
+              <div class="column eight wide"><a href="/comics/issue_4.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen Issue 04 Cover-01.png">
                   <h3>Issue 04</h3></a></div>
-              <div class="column four wide left aligned"><a href="/comics/issue_4.html">
+              <div class="column eight wide left aligned"><a href="/comics/issue_4.html">
                   <h2>Issue 04</h2></a>
                 <h4>Islands</h4>
                 <p>Anak is on a quest to find out why he's the last of his kind - oh and he might as well save the human race along the way!</p><a href="/comics/issue_4.html">Begin Issue 04</a>
               </div>
             </div>
             <div class="row">
-              <div class="column four wide"><a href="/comics/issue_3.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen Issue 03 Cover-01.png">
-                  <h3>Issue 03</h3></a></div>
-              <div class="column four wide left aligned"><a href="/comics/issue_3.html">
-                  <h2>Issue 03</h2></a>
-                <h4>Bulawan</h4>
-                <p>A hundred million years ago, an advanced society prospered from advancements based on ancient relics from a long dead race.</p><a href="/comics/issue_3.html">Enter Issue 03</a>
-              </div>
-              <div class="column four wide"><a href="/comics/issue_2.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen Issue 02 Cover-01.png">
-                  <h3>Issue 02</h3></a></div>
-              <div class="column four wide left aligned"><a href="/comics/issue_2.html">
-                  <h2>Issue 02</h2></a>
-                <h4>Mysteries in Outer Space</h4>
-                <p>Ryoko is part of a team tasked with saving the Earth from a second water comet and the human race from extinction!</p>
-                <ul>
-                  <li><a href="/comics/issue_2.html">Launch Issue 02</a></li>
-                  <li><a href="/comics/issue_2_script.html">Transcript</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="row">
-              <div class="column four wide"><a href="/comics/issue_1.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen Issue 01 Cover-01.png">
-                  <h3>Issue 01</h3></a></div>
-              <div class="column four wide left aligned"><a href="/comics/issue_1.html">
-                  <h2>Issue 01</h2></a>
-                <h4>Welcome to Kamigen</h4>
-                <p>The first issue introduces Kamigen Island and explains a bit about the current state of the world.</p>
-                <ul>
-                  <li><a href="/comics/issue_1.html">Open Issue 01</a></li>
-                  <li><a href="/comics/issue_1_script.html">Transcript</a></li>
-                </ul>
+              <div class="column eight wide"><a href="/comics/issue_5.html"><img class="ui image fluid" src="./art/comics/SD/Kamigen Issue 05 Cover-01.png">
+                  <h3>Issue 05</h3></a></div>
+              <div class="column eight wide left aligned"><a href="/comics/issue_5.html">
+                  <h2>Issue 05</h2></a>
+                <h4>Name TBA</h4>
+                <p>This is the end of phase 1 and the first comic to be entirely in color!</p><a href="/comics/issue_5.html">Preview Issue 05</a>
               </div>
             </div>
           </div>
